2006-03-07  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* gnu/java/rmi/server/UnicastRef.java,
	gnu/java/rmi/server/UnicastServer.java: Formatted.

2006-03-07  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	* gnu/java/rmi/server/CombinedClassLoader.java (findClass,
	findLibrary, findResouce, findResources): check all loaders in
	array.

2006-03-07  Audrius Meskauskas  <AudriusA@Bioinformatics.org>

	PR 25526
	* gnu/java/rmi/dgc/DGCImpl.java (LeaseRecord, leaseCache): Removed. 
	(RefProtector):	new inner class. (dirty): Rewritten.
	* gnu/java/rmi/server/UnicastRef.java (dgcId, dgcInterfaceHash,
	dgcSequence, DIRTY, this_id): New fields. (equals, hashCode, notifyDGC):
	new methods. (readExternal): Create LeaseRenewingTask if non local.
	* gnu/java/rmi/server/UnicastServer.java (objects): 
	Use WeakHashMap. (refcache): Use WeakIdentityHashMap. 
	(getExported): New method.
	* gnu/java/rmi/dgc/LeaseRenewingTask.java: New file.

2006-03-06  Mark Wielaard  <mark@klomp.org>

	* doc/www.gnu.org/announce/20060306.wml: New file.
	* doc/www.gnu.org/newsitems.txt: Add 0.90 release announcement.
	* doc/www.gnu.org/downloads/downloads.wml: Add 0.90.

2006-03-06  Mark Wielaard  <mark@klomp.org>

	* NEWS: Fix typo.

2006-03-06  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/metal/MetalLookAndFeel.java
	(initComponentDefaults): Use Boolean.TRUE for 
	'CheckBoxMenuItem.borderPainted'.

2006-03-06  Lillian Angel  <langel@redhat.com>
	
	PR classpath/26569
	* java/awt/List.java
	(preferredSize): Return the size of the list if the peer is null.
	* gnu/java/awt/peer/gtk/GtkListPeer.java
	(preferredSize): Code was returning the minimum size of the list.
	Added adjustment to the width of the list so it is a proper size.

2006-03-06  Wolfgang Baer  <WBaer@gmx.de>

	* gnu/java/net/protocol/http/HTTPURLConnection.java: Organized imports.
	(getRequestProperty): Remove duplicated null check.
	* java/net/URLConnection.java: 
	(URLConnection): Javadoc fix.